[package]
name = "rstidal"
description = "Asynchronous client for the Tidal music service API"
version = "0.1.2"
authors = ["4xposed <stokp1@gmail.com>"]
keywords = ["Tidal", "API", "Asynchronous"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/4xposed/rstidal"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"

[dev-dependencies]
mockito = "1.0"
tokio = { version = "1.28", features = ["full"] }
dotenv = { version = "0.15" }
